# my_finance

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.streamlit/: config.toml
tests/: test_my_finance.py
